; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_ui_actionstart.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_ui_actionstart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_10__ = type { i32 }

@__const.ui_actionstart.query = private unnamed_addr constant [49 x i8] c"SELECT * FROM `ActionText` WHERE `Action` = '%s'\00", align 16
@INSTALLMESSAGE_ACTIONSTART = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, i32, i32, i32)* @ui_actionstart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ui_actionstart(%struct.TYPE_11__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [49 x i8], align 16
  %11 = alloca %struct.TYPE_10__*, align 8
  %12 = alloca %struct.TYPE_10__*, align 8
  %13 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %14 = bitcast [49 x i8]* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %14, i8* align 16 getelementptr inbounds ([49 x i8], [49 x i8]* @__const.ui_actionstart.query, i32 0, i32 0), i64 49, i1 false)
  %15 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds [49 x i8], [49 x i8]* %10, i64 0, i64 0
  %19 = load i32, i32* %7, align 4
  %20 = call %struct.TYPE_10__* @MSI_QueryGetRecord(i32 %17, i8* %18, i32 %19)
  store %struct.TYPE_10__* %20, %struct.TYPE_10__** %12, align 8
  %21 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %22 = icmp ne %struct.TYPE_10__* %21, null
  br i1 %22, label %23, label %28

23:                                               ; preds = %4
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %25 = call i32 @MSI_RecordGetString(%struct.TYPE_10__* %24, i32 2)
  store i32 %25, i32* %8, align 4
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %27 = call i32 @MSI_RecordGetString(%struct.TYPE_10__* %26, i32 3)
  store i32 %27, i32* %9, align 4
  br label %28

28:                                               ; preds = %23, %4
  %29 = call %struct.TYPE_10__* @MSI_CreateRecord(i32 3)
  store %struct.TYPE_10__* %29, %struct.TYPE_10__** %11, align 8
  %30 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %31 = icmp ne %struct.TYPE_10__* %30, null
  br i1 %31, label %33, label %32

32:                                               ; preds = %28
  store i32 -1, i32* %5, align 4
  br label %58

33:                                               ; preds = %28
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @MSI_RecordSetStringW(%struct.TYPE_10__* %34, i32 1, i32 %35)
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %38 = load i32, i32* %8, align 4
  %39 = call i32 @MSI_RecordSetStringW(%struct.TYPE_10__* %37, i32 2, i32 %38)
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %41 = load i32, i32* %9, align 4
  %42 = call i32 @MSI_RecordSetStringW(%struct.TYPE_10__* %40, i32 3, i32 %41)
  %43 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %44 = load i32, i32* @INSTALLMESSAGE_ACTIONSTART, align 4
  %45 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %46 = call i32 @MSI_ProcessMessage(%struct.TYPE_11__* %43, i32 %44, %struct.TYPE_10__* %45)
  store i32 %46, i32* %13, align 4
  %47 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %48 = icmp ne %struct.TYPE_10__* %47, null
  br i1 %48, label %49, label %53

49:                                               ; preds = %33
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %51 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %50, i32 0, i32 0
  %52 = call i32 @msiobj_release(i32* %51)
  br label %53

53:                                               ; preds = %49, %33
  %54 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %55 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %54, i32 0, i32 0
  %56 = call i32 @msiobj_release(i32* %55)
  %57 = load i32, i32* %13, align 4
  store i32 %57, i32* %5, align 4
  br label %58

58:                                               ; preds = %53, %32
  %59 = load i32, i32* %5, align 4
  ret i32 %59
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local %struct.TYPE_10__* @MSI_QueryGetRecord(i32, i8*, i32) #2

declare dso_local i32 @MSI_RecordGetString(%struct.TYPE_10__*, i32) #2

declare dso_local %struct.TYPE_10__* @MSI_CreateRecord(i32) #2

declare dso_local i32 @MSI_RecordSetStringW(%struct.TYPE_10__*, i32, i32) #2

declare dso_local i32 @MSI_ProcessMessage(%struct.TYPE_11__*, i32, %struct.TYPE_10__*) #2

declare dso_local i32 @msiobj_release(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
